# simple_project

./: .gitignore  README.md  pyproject.toml
simple_project/: app.py
simple_project/db/: .env  config.py  database.py  models.py  orm.py
simple_project/static/: style.css
simple_project/template/: home_page.html
