[tool.poetry]
name = "simple-project"
version = "0.1.0"
description = ""
authors = ["DVRST <kaitoshoma12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
flask = "^3.0.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
setuptools = "^70.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
